--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^9.4.0",
+    "eslint": "8.57.0",
     "next-sitemap": "^4.2.3",
     "postcss": "^8.4.24",
     "postcss-import": "^16.1.0",
