--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,15 +13,20 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "strictNullChecks": true
   },
   "exclude": ["node_modules"],
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".forestry/types.ts",
     "next-sitemap.config.ts",
-    ".forestry/config.ts"
+    ".next/types/**/*.ts"
   ]
 }
