--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^14.2.5",
     "@svgr/webpack": "^8.0.1",
     "@tinacms/cli": "^1.5.47",
     "@types/js-cookie": "^3.0.3",
