--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bradystroud",
   "version": "0.1.0",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "tinacms dev -c \"next dev\"",
     "build": "tinacms build && next build && next-sitemap --config next-sitemap.config.js",
     "start": "tinacms build && next start",
