--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "dependencies": {
     "@headlessui/react": "2.2.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@vercel/analytics": "^1.3.2",
+    "@vercel/speed-insights": "^1.0.14",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
