--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bradystroud",
   "version": "0.1.0",
+  "packageManager": "pnpm@10.6.1",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "dev": "tinacms dev -c \"next dev\"",
@@ -11,35 +12,34 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^15.0.1",
+    "@next/eslint-plugin-next": "^15.2.1",
     "@svgr/webpack": "^8.1.0",
-    "@tinacms/cli": "^1.6.10",
+    "@tinacms/cli": "^1.9.2",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^22.8.2",
+    "@types/node": "^22.13.9",
     "@types/react": "^18.3.12",
     "@types/styled-components": "^5.1.34",
-    "@typescript-eslint/eslint-plugin": "^8.12.1",
-    "@typescript-eslint/parser": "^8.12.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "9.13.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "eslint": "9.21.0",
     "next-sitemap": "^4.2.3",
-    "postcss": "^8.4.47",
-    "postcss-import": "^16.1.0",
+    "postcss": "^8.5.3",
     "postcss-nesting": "^13.0.1"
   },
   "dependencies": {
     "@headlessui/react": "2.2.0",
+    "@tailwindcss/postcss": "^4.0.12",
     "@tailwindcss/typography": "^0.5.15",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.5.0",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.14",
-    "tinacms": "^2.3.0",
-    "typescript": "^5.6.3"
+    "tailwindcss": "^4.0.12",
+    "tinacms": "^2.7.2",
+    "typescript": "^5.8.2"
   },
   "resolutions": {
     "final-form": "4.20.1"
