--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss-nesting": "^13.0.1"
   },
   "dependencies": {
+    "@giscus/react": "^3.1.0",
     "@headlessui/react": "2.2.0",
     "@tailwindcss/postcss": "^4.0.12",
     "@tailwindcss/typography": "^0.5.15",
