--- a/package.json
+++ b/package.json
@@ -43,6 +43,12 @@
     "typescript": "^5.8.2"
   },
   "resolutions": {
-    "final-form": "4.20.1"
+    "final-form": "4.20.1",
+    "@types/node": "22.13.10"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/node": "22.13.10"
+    }
   }
 }
