--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^15.2.1",
+    "@next/eslint-plugin-next": "^15.2.4",
     "@svgr/webpack": "^8.1.0",
-    "@tinacms/cli": "^1.9.2",
+    "@tinacms/cli": "^1.9.3",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10",
+    "@types/node": "22.14.0",
+    "@types/react": "^19.1.0",
     "@types/styled-components": "^5.1.34",
-    "@typescript-eslint/eslint-plugin": "^8.26.0",
-    "@typescript-eslint/parser": "^8.26.0",
-    "eslint": "9.22.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
+    "eslint": "9.23.0",
     "next-sitemap": "^4.2.3",
     "postcss": "^8.5.3",
     "postcss-nesting": "^13.0.1"
@@ -29,17 +29,17 @@
   "dependencies": {
     "@giscus/react": "^3.1.0",
     "@headlessui/react": "2.2.0",
-    "@tailwindcss/postcss": "^4.0.12",
+    "@tailwindcss/postcss": "^4.1.1",
     "@tailwindcss/typography": "^0.5.15",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
-    "next": "^15.0.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.2.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "sharp": "^0.33.5",
-    "tailwindcss": "^4.0.12",
-    "tinacms": "^2.7.2",
+    "tailwindcss": "^4.1.1",
+    "tinacms": "^2.7.3",
     "typescript": "^5.8.2"
   },
   "resolutions": {
