--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bradystroud",
   "version": "0.1.0",
-  "packageManager": "pnpm@10.6.1",
+  "packageManager": "pnpm@10.7.1+sha256.dc514890ea719003cb7a57d6b21af24fdafadd9f171e7567eca1665d7cfcef76",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "dev": "tinacms dev -c \"next dev\"",
