--- a/package.json
+++ b/package.json
@@ -5,40 +5,42 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "dev": "tinacms dev -c \"next dev\"",
-    "build": "tinacms build && next build && next-sitemap --config next-sitemap.config.js",
+    "build": "tinacms build && next build && ts-node scripts/generate-rss.ts && next-sitemap --config next-sitemap.config.js",
+    "generate-rss": "ts-node scripts/generate-rss.ts",
     "start": "tinacms build && next start",
     "export": "npm run build && next export",
-    "postbuild": "next-sitemap --config next-sitemap.config.js",
     "lint": "eslint . --ext .ts,.tsx"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^15.3.0",
+    "@next/eslint-plugin-next": "^15.3.1",
     "@svgr/webpack": "^8.1.0",
     "@tinacms/cli": "^1.9.5",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "22.14.1",
-    "@types/react": "^19.1.2",
+    "@types/node": "22.15.12",
+    "@types/react": "^19.1.3",
     "@types/styled-components": "^5.1.34",
-    "@typescript-eslint/eslint-plugin": "^8.30.1",
-    "@typescript-eslint/parser": "^8.30.1",
-    "eslint": "9.24.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "eslint": "9.26.0",
     "next-sitemap": "^4.2.3",
     "postcss": "^8.5.3",
-    "postcss-nesting": "^13.0.1"
+    "postcss-nesting": "^13.0.1",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "@giscus/react": "^3.1.0",
-    "@headlessui/react": "2.2.1",
-    "@tailwindcss/postcss": "^4.1.4",
+    "@headlessui/react": "2.2.2",
+    "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/typography": "^0.5.15",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
-    "next": "^15.3.0",
+    "gray-matter": "^4.0.3",
+    "next": "^15.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "sharp": "^0.34.1",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^4.1.5",
     "tinacms": "^2.7.5",
     "typescript": "^5.8.3"
   },
