--- a/package.json
+++ b/package.json
@@ -12,36 +12,36 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^15.3.1",
+    "@next/eslint-plugin-next": "^15.3.4",
     "@svgr/webpack": "^8.1.0",
     "@tinacms/cli": "^1.9.9",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "22.15.12",
-    "@types/react": "^19.1.3",
+    "@types/node": "24.0.7",
+    "@types/react": "^19.1.8",
     "@types/styled-components": "^5.1.34",
-    "@typescript-eslint/eslint-plugin": "^8.32.0",
-    "@typescript-eslint/parser": "^8.32.0",
-    "eslint": "9.26.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
+    "eslint": "9.30.0",
     "next-sitemap": "^4.2.3",
-    "postcss": "^8.5.3",
-    "postcss-nesting": "^13.0.1",
-    "ts-node": "^10.9.1"
+    "postcss": "^8.5.6",
+    "postcss-nesting": "^13.0.2",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@giscus/react": "^3.1.0",
-    "@headlessui/react": "2.2.2",
-    "@tailwindcss/postcss": "^4.1.5",
-    "@tailwindcss/typography": "^0.5.15",
-    "@vercel/analytics": "^1.3.2",
-    "@vercel/speed-insights": "^1.0.14",
+    "@headlessui/react": "2.2.4",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/typography": "^0.5.16",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "gray-matter": "^4.0.3",
-    "next": "^15.3.1",
+    "next": "^15.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "sharp": "^0.34.1",
-    "tailwindcss": "^4.1.5",
-    "tinacms": "^2.7.5",
+    "sharp": "^0.34.2",
+    "tailwindcss": "^4.1.11",
+    "tinacms": "^2.7.9",
     "typescript": "^5.8.3"
   },
   "resolutions": {
@@ -51,6 +51,13 @@
   "pnpm": {
     "overrides": {
       "@types/node": "22.13.10"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@tailwindcss/oxide",
+      "@vercel/speed-insights",
+      "better-sqlite3",
+      "esbuild",
+      "sharp"
+    ]
   }
 }
