--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "typescript": "^5.8.3"
   },
   "resolutions": {
-    "final-form": "4.20.1",
-    "@types/node": "22.13.10"
+    "final-form": "4.20.1"
   },
   "pnpm": {
     "overrides": {
