--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ TINA_TOKEN=***
 
 # This is set by default CI with Netlify/Vercel/Github, but can be overriden
 NEXT_PUBLIC_TINA_BRANCH=***
+
+# OpenAI API key for AI blog generation
+OPENAI_API_KEY=***
