--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "gray-matter": "^4.0.3",
     "next": "^15.4.5",
+    "openai": "^5.13.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
