--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "packageManager": "pnpm@10.13.1+sha256.0f9ed48d808996ae007835fb5c4641cf9a300def2eddc9e957d9bbe4768c5f28",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "postinstall": "node scripts/patch-tinacms.js || true",
     "dev": "tinacms dev -c \"next dev\"",
     "build": "tinacms build && next build && ts-node scripts/generate-rss.ts && next-sitemap --config next-sitemap.config.js",
     "generate-rss": "ts-node scripts/generate-rss.ts",
@@ -35,7 +36,7 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "gray-matter": "^4.0.3",
-    "next": "16.1.1",
+    "next": "16.1.4",
     "openai": "^6.16.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -64,9 +65,6 @@
       "color-string": {
         "type": "commonjs"
       }
-    },
-    "patchedDependencies": {
-      "tinacms@3.2.0": "patches/tinacms@3.2.0.patch"
     }
   }
 }
