--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
   },
   "pnpm": {
     "overrides": {
-      "@types/node": "22.13.10",
-      "color-string": "^1.9.1"
+      "@types/node": "22.13.10"
     },
     "onlyBuiltDependencies": [
       "@tailwindcss/oxide",
@@ -60,11 +59,6 @@
       "better-sqlite3",
       "esbuild",
       "sharp"
-    ],
-    "packageExtensions": {
-      "color-string": {
-        "type": "commonjs"
-      }
-    }
+    ]
   }
 }
