--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bradystroud",
   "version": "0.1.0",
-  "packageManager": "pnpm@10.13.1+sha256.0f9ed48d808996ae007835fb5c4641cf9a300def2eddc9e957d9bbe4768c5f28",
+  "packageManager": "pnpm@10.28.1",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "postinstall": "node scripts/patch-tinacms.js || true",
