--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
     "@vercel/analytics": "^1.6.1",
+    "@vercel/og": "^0.8.6",
     "@vercel/speed-insights": "^1.3.1",
     "gray-matter": "^4.0.3",
     "next": "16.1.4",
