--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "bradystroud",
   "version": "0.1.0",
-  "packageManager": "pnpm@10.28.1",
+  "packageManager": "bun@1.3.7",
   "scripts": {
-    "preinstall": "npx only-allow pnpm",
-    "postinstall": "node scripts/patch-tinacms.js || true",
-    "dev": "tinacms dev -c \"next dev\"",
-    "build": "tinacms build && next build && ts-node scripts/generate-rss.ts && next-sitemap --config next-sitemap.config.js",
-    "generate-rss": "ts-node scripts/generate-rss.ts",
-    "start": "tinacms build && next start",
-    "export": "npm run build && next export",
+    "postinstall": "bun scripts/patch-tinacms.js || true",
+    "dev": "bun --bun tinacms dev -c \"next dev\"",
+    "build": "bun --bun tinacms build && bun --bun next build && bun run scripts/generate-rss.ts && bun --bun next-sitemap --config next-sitemap.config.js",
+    "generate-rss": "bun run scripts/generate-rss.ts",
+    "start": "bun --bun tinacms build && bun --bun next start",
+    "export": "bun run build && bun --bun next export",
     "lint": "eslint . --ext .ts,.tsx"
   },
   "devDependencies": {
@@ -48,18 +47,7 @@
     "typescript": "^5.9.3"
   },
   "resolutions": {
-    "final-form": "4.20.1"
-  },
-  "pnpm": {
-    "overrides": {
-      "@types/node": "22.13.10"
-    },
-    "onlyBuiltDependencies": [
-      "@tailwindcss/oxide",
-      "@vercel/speed-insights",
-      "better-sqlite3",
-      "esbuild",
-      "sharp"
-    ]
+    "final-form": "4.20.1",
+    "@types/node": "22.13.10"
   }
 }
