--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "eslint": "9.39.2",
     "next-sitemap": "^4.2.3",
     "postcss": "^8.5.6",
-    "postcss-nesting": "^14.0.0",
-    "ts-node": "^10.9.2"
+    "postcss-nesting": "^14.0.0"
   },
   "dependencies": {
     "@giscus/react": "^3.1.0",
@@ -46,7 +45,7 @@
     "tinacms": "^3.2.0",
     "typescript": "^5.9.3"
   },
-  "resolutions": {
+  "overrides": {
     "final-form": "4.20.1",
     "@types/node": "22.13.10"
   }
